base/api/resources/ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: api
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`$DOMAIN`)
      kind: Rule
      services:
        - name: api
          port: 80
  tls:
    secretName: api-cert
